--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ShaderNinja - A live OpenGL fragment shader compiler and viewer
 
-[ShaderNinja on SourceForge](https://sourceforge.net/projects/shaderninja/)
+ShaderNinja on SourceForge: https://sourceforge.net/projects/shaderninja/
 
 Here I make several remarks regarding the compilation of this program.
 
